Fixed whitespace break

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,17 @@ figure {
   background-color: #192024;
 }
 
+.section-break {
+  background-color: #192024;
+}
+
+.section-break hr {
+  width: 100%;
+  height: 2px;
+  border:none;
+  margin: 0;
+}
+
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
